saving new changes

--- a/_index.scss
+++ b/_index.scss
@@ -1,4 +1,6 @@
-h1 {
-  padding-top: 20px;
-  margin-bottom: 0;
+.sea-monster-card {
+  background-size:auto;
+  background-position: center;
+  border: none;
+  margin-top: 0;
 }
